# elio

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs
.copr/: Makefile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-preview-issue.yml  03-installation-packaging.yml  04-feature-request.yml  05-documentation.yml  06-question.yml  config.yml
.github/workflows/: ci.yml  macos-artifact-test.yml  release.yml  rust.yml
assets/syntaxes/: Astro.sublime-syntax  CMake.sublime-syntax  COBOL.sublime-syntax  CSharp.sublime-syntax  Dart.sublime-syntax  Dockerfile.sublime-syntax  Elixir.sublime-syntax  Fortran.sublime-syntax  HCL.sublime-syntax  JSX.sublime-syntax  Julia.sublime-syntax  Just.sublime-syntax  Kotlin.sublime-syntax  Less.sublime-syntax  Nix.sublime-syntax  PowerShell.sublime-syntax  QML.sublime-syntax  SCSS.sublime-syntax  Sass.sublime-syntax  Swift.sublime-syntax  TSX.sublime-syntax  TypeScript.sublime-syntax  Zig.sublime-syntax
assets/themes/default/: theme.toml
docs/: architecture.md
examples/: config.toml  theme.toml
examples/default/: theme.toml
examples/themes/amber-dusk/: theme.toml
examples/themes/blush-light/: theme.toml
examples/themes/catppuccin-mocha/: theme.toml
examples/themes/default/: theme.toml
examples/themes/default-light/: theme.toml
examples/themes/navi/: theme.toml
examples/themes/neon-cherry/: theme.toml
examples/themes/tokyo-night/: theme.toml
examples/themes/transparent/: theme.toml
packaging/fedora/: Makefile  README.md  elio.spec
packaging/linux/: elio.desktop
src/: app.rs  appearance.rs  cli.rs  config.rs  file_facts.rs  lib.rs  main.rs  search.rs  shell.rs  ui.rs  zoxide.rs
src/app/: actions.rs  constants.rs  directory_counts.rs  drag.rs  events.rs  git.rs  image_preview.rs  jobs.rs  mod.rs  open_rules.rs  pdf_preview.rs  preview.rs  previewing.rs  searching.rs  state.rs  support.rs  terminal_images.rs  text_edit.rs  types.rs  watching.rs
src/app/actions/: archive.rs  archive_create.rs  directory.rs  git_branch.rs  git_commit.rs  git_menu.rs  goto.rs  mod.rs  navigation.rs  preview.rs  tests.rs
src/app/clipboard/: copy.rs  mod.rs  tests.rs
src/app/create/: bulk_rename.rs  editing.rs  editor_bulk_rename.rs  mod.rs  new_file.rs  rename.rs  restore.rs  tests.rs  trash.rs  validation.rs
src/app/events/: tests.rs
src/app/input/: keyboard.rs  mod.rs  mouse.rs  tests.rs  wheel.rs
src/app/jobs/: config.rs  metrics.rs  mod.rs  scheduler.rs  sync.rs  tests.rs  types.rs
src/app/open_with/: discovery.rs  input.rs  mod.rs  overlay.rs  tests.rs
src/app/overlays/: comic.rs  epub.rs  images.rs  inline_image.rs  mod.rs  preview_visual.rs
src/app/pdf_preview/: backend.rs  (+2 more)
src/archive/: create.rs  extract.rs  format.rs  mod.rs
src/config/: keys.rs  layout.rs  loading.rs  mod.rs  open.rs  places.rs  ui.rs
src/core/: file_model.rs  mod.rs  sidebar.rs
src/file_info/: archives.rs  classify.rs  extensions.rs  license.rs  mod.rs  names.rs  tests.rs  types.rs
src/fs/: directory.rs  directory_stats.rs  format.rs  item_count.rs  mod.rs  opener.rs  places.rs  restore.rs  search.rs  sort.rs  trashinfo.rs  watch.rs
src/preview/: appearance.rs  audio.rs  directory.rs  dispatch.rs  document.rs  font.rs  layout.rs  markdown.rs  mod.rs  process.rs  tests.rs  text.rs  types.rs  video.rs
src/runtime/: draw.rs  mod.rs  session_files.rs  terminal.rs
src/shell_integration/: mod.rs  scripts.rs  tests.rs
src/ui/: browser.rs  chrome.rs  helpers.rs  mod.rs  overlay_manager.rs  overlays.rs  theme.rs
tests/: architecture_guardrails.rs  cli.rs  shell_integration_cli.rs  shell_runtime_cli.rs
(+343 files in other folders)
