[package]
name = "elio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
cfb = "0.10"
crossterm = "0.28"
notify = "7.0"
json5 = "0.4"
pulldown-cmark = "0.13"
quick-xml = "0.38"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
toml = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
