[package]
name = "elio"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
cfb = "0.10"
crossterm = "0.28"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
notify = "7.0"
json5 = "0.4"
pulldown-cmark = "0.13"
quick-xml = "0.38"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.2", default-features = false, features = ["parsing", "regex-onig"] }
tar = "0.4"
yaml_serde = "0.10"
toml = "0.8"
toml_edit = "0.22"
unicode-width = "0.2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
trash = "5.2.5"

[build-dependencies]
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "yaml-load", "regex-onig"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
