[package]
name = "elio"
version = "1.2.0"
edition = "2024"
rust-version = "1.93"
description = "Snappy, batteries-included terminal file manager with rich previews, inline images, bulk actions, and trash support."
license = "MIT"
repository = "https://github.com/elio-fm/elio"
readme = "README.md"
keywords = ["terminal", "file-manager", "tui", "preview", "images"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0"
color_quant = "1.1"
dirs = "5"
libc = "0.2"
base64 = "0.22"
cfb = "0.10"
crossterm = "0.28"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["gif", "ico", "jpeg", "png", "webp"] }
notify = "8.2"
json5 = "0.4"
lofty = "0.24"
pulldown-cmark = "0.13"
quick-xml = "0.38"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.2", default-features = false, features = ["parsing", "regex-onig"] }
tar = "0.4"
yaml_serde = "0.10"
toml = "0.8"
toml_edit = "0.22"
unicode-width = "0.2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
trash = "5.2.5"
rusqlite = { version = "0.39", features = ["bundled"] }

[build-dependencies]
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "yaml-load", "regex-onig"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[target.'cfg(target_os = "macos")'.dependencies]
# Foundation types for path/string handling, display names, and bundle IDs.
# CoreServices (linked inline in macos.rs) provides the Launch Services C API
# used for app discovery — the same API Finder uses for its "Open With" menu.
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSFileManager", "NSString", "NSURL"] }
